@@ -1,3 +1,7 @@
+01 April 2008
+
+* Support SIGUSR1 as an alias for SIGINFO, for platforms without SIGINFO.
+
 06 March 2008
 
 * Support multiple folders (folders { "a" "b" }) on IMAP fetching. Requested by
@@ -807,4 +811,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.188 2008-03-12 06:18:39 nicm Exp $
+$Id: CHANGES,v 1.189 2008-04-01 21:02:21 nicm Exp $
